{{$NEXT}}

    - Some POD cleanup
    - Link to C:A:RV:ErrorHandler::Action::Email by [Stefan
      Profanter]
0.100161  2011-01-20 09:12:41 Europe/Oslo
    - Fix a problem with + to load fully namespaced stuff
      [Philip Karlsson]

0.100160  2010-01-16 06:50:51 Europe/Oslo
    - Fixing the last release, which was utterly broken.